--- a/.abcde.conf
+++ b/.abcde.conf
@@ -22,19 +22,41 @@ CDDBLOCALDIR="$HOME/.cddb"
 CDDBLOCALRECURSIVE="y"
 CDDBUSELOCAL="y"
 
-# Specify the encoder to use for MP3. In this case
-# the alternatives are gogo, bladeenc, l3enc, xingmp3enc, mp3enc.
-MP3ENCODERSYNTAX=lame
+# OGGENCODERSYNTAX=oggenc                   # Specify encoder for Ogg Vorbis
+MP3ENCODERSYNTAX=lame                     # Specify encoder for MP3
+FLACENCODERSYNTAX=flac                    # Specify encoder for FLAC
+# MPCENCODERSYNTAX=mpcenc                   # Specify encoder for Musepack
+# AACENCODERSYNTAX=fdkaac                   # Specify encoder for AAC
+# OPUSENCODERSYNTAX=opusenc                 # Specify encoder for Opus
+# WVENCODERSYNTAX=wavpack                   # Specify encoder for Wavpack
+# APENCODERSYNTAX=mac                       # Specify encoder for Monkey's Audio
+# TTAENCODERSYNTAX=tta                      # Specify encoder for True Audio
+# MP2ENCODERSYNTAX=twolame                  # Specify encoder for MP2
+# MKAENCODERSYNTAX=ffmpeg                   # Specify encoder for MKA (AC3 via FFmpeg)
 
-# Specify the path to the selected encoder. In most cases the encoder
-# should be in your $PATH as I illustrate below, otherwise you will
-# need to specify the full path. For example: /usr/bin/lame
-LAME=lame
+# OGGENC=oggenc                             # Path to Ogg Vorbis encoder
+LAME=lame                                 # Path to MP3 encoder
+FLAC=flac                                 # Path to FLAC encoder
+# MPCENC=mpcenc                             # Path to Musepack encoder
+# FDKAAC=fdkaac                             # Path to the AAC encoder
+# OPUSENC=opusenc                           # Path to Opus encoder
+# WVENC=wavpack                             # Path to WavPack encoder
+# APENC=mac                                 # Path to Monkey's Audio encoder
+# TTA=tta                                   # Path to True Audio encoder
+# TWOLAME=twolame                           # Path to MP2 encoder
+# FFMPEG=ffmpeg                             # Path to FFmpeg (AC3 via FFmpeg)
 
-# Specify your required encoding options here. Multiple options can
-# be selected as '--preset standard --another-option' etc.
-# The '-V 2' option gives VBR encoding between 170-210 kbits/s.
-LAMEOPTS='-V 0'
+# OGGENCOPTS='-q 6'                         # Options for Ogg Vorbis
+LAMEOPTS='-V 0'                           # Options for MP3
+FLACOPTS='-s -e -V -8'                    # Options for FLAC
+# MPCENCOPTS='--extreme'                    # Options for Musepack
+# FDKAACENCOPTS='-p 2 -m 5 -a 1'            # Options for fdkaac
+# OPUSENCOPTS="--vbr --bitrate 128"         # Options for Opus
+# WVENCOPTS="-hx3"                          # Options for WavPack
+# APENCOPTS="-c4000"                        # Options for Monkey's Audio
+# TTAENCOPTS=""                             # Options for True Audio
+# TWOLAMENCOPTS="--bitrate 320"             # Options for MP2
+# FFMPEGENCOPTS="-c:a ac3 -b:a 448k"        # Options for MKA (AC3 via FFmpeg)
 
 # Output type for MP3.
 OUTPUTTYPE="mp3"
