abcde: output to mp3 and flac by default

--- a/.abcde.conf
+++ b/.abcde.conf
@@ -58,8 +58,8 @@ FLACOPTS='-s -e -V -8'                    # Options for FLAC
 # TWOLAMENCOPTS="--bitrate 320"             # Options for MP2
 # FFMPEGENCOPTS="-c:a ac3 -b:a 448k"        # Options for MKA (AC3 via FFmpeg)
 
-# Output type for MP3.
-OUTPUTTYPE="mp3"
+# OUTPUTTYPE="ogg,mp3,flac,mpc,m4a,opus,wv,ape,tta,mp2,mka"  # Encode to 11 formats!
+OUTPUTTYPE="mp3,flac"
 
 # The cd ripping program to use. There are a few choices here: cdda2wav,
 # dagrab, cddafs (Mac OS X only) and flac. New to abcde 2.7 is 'libcdio'.
