--- a/.tmuxinator/listings.yml
+++ b/.tmuxinator/listings.yml
@@ -1,10 +1,10 @@
-# ~/.tmuxinator/dotfiles.yml
+# ~/.tmuxinator/listings.yml
 
-name: dotfiles
-root: ~/.dotfiles
+name: listings
+root: ~/dev/src/git/tv_grab_uk_radiotimes
 
 # Specifies (by name or index) which window will be selected on project startup. If not set, the first window is used.
-startup_window: dotfiles
+startup_window: listings
 
 # Controls whether the tmux session should be attached to automatically. Defaults to true.
 attach: false
@@ -13,18 +13,13 @@ attach: false
 # post: tmux -CC attach -t dpkg
 
 windows:
-  - dotfiles:
-      root: ~/.dotfiles
+  - listings:
+      root: ~/dev/src/git/tv_grab_uk_radiotimes
       layout: main-vertical
       panes:
-        - la
-  - dotfiles-pkg:
-      root: ~/dev/src/git/debian-packaging/knowledgejunkie-dotfiles-deps
+        - ls -lrt
+  - augment:
+      root: ~/dev/src/git/tv_grab_uk_radiotimes
       layout: main-vertical
       panes:
-        - #empty
-  - packaging-pkg:
-      root: ~/dev/src/git/debian-packaging/knowledgejunkie-packaging-deps
-      layout: main-vertical
-      panes:
-        - #empty
+        - vim augment.rules
