i3blocks: add updated battery script to ignore missing battery
This update ensure the BRIGHT RED WARNING does not appear on a desktop
machine whilst working normally on a laptop

--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -67,8 +67,8 @@ interval=once
 
 # Battery indicator
 #
-[battery]
-command=$CONTRIB_SCRIPT_DIR/battery/battery
+[battery-ignoremissing]
+command=~/.config/i3blocks/battery
 markup=pango
 interval=30
 
