tmux: reduce repeat-time to 300ms

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,8 +20,11 @@
 
 # Global settings {{{1
 
-# Setting the delay between prefix and command
+# Set the delay between prefix and command
 set -s escape-time 1
+
+# Set the maximum for a key repeat
+set -s repeat-time 300
 
 # Set the base index for windows to 1 instead of 0
 set -g base-index 1
