--- a/.tmux.conf
+++ b/.tmux.conf
@@ -321,6 +321,9 @@ bind -n S-Down \
 
 # Based on https://github.com/seebi/tmux-colors-solarized
 
+setw -g window-active-style fg=colour12,bg=colour8
+setw -g window-style fg=colour10,bg=colour0
+
 set -g status-style fg=colour3,bg=colour0
 setw -g window-status-style fg=colour11,bg=default
 setw -g window-status-current-style fg=colour2,bg=default
@@ -331,7 +334,7 @@ set -g message-style fg=colour1,bg=colour0
 
 set -g display-panes-active-colour colour1
 set -g display-panes-colour colour4
-setw -g pane-border-style fg=colour0
+setw -g pane-border-style fg=colour11,bg=colour0
 setw -g pane-active-border-style fg=colour11
 
 setw -g clock-mode-colour colour2
