tmux: reorder options by type; reorder some sections in config file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,86 +18,99 @@
 # - to see all bindable keys:
 #     https://raw.githubusercontent.com/tmux/tmux/master/key-string.c
 
-# Global settings {{{1
+# Server options {{{1
 
-# Set the delay between prefix and command
-set -s escape-time 1
+# Set the delay (ms) between prefix and command
+set -g escape-time 1
 
-# Set the maximum for a key repeat
-set -s repeat-time 300
+# Set the default terminal mode to 256color mode
+set -g default-terminal "screen-256color"
+
+# Needed as on tmux 1.9 and up (defaults to off).
+# Added in tmux commit c7a121cfc0137c907b7bfb.
+set -g focus-events on
+
+# Session options {{{1
 
 # Set the base index for windows to 1 instead of 0
 set -g base-index 1
 
-# Set the base index for panes to 1 instead of 0
-setw -g pane-base-index 1
+# Set action on a bell in a window when monitor-bell is on
+set -g bell-action none
 
-# Automatically renumber window numbers on closing a pane (tmux >= 1.7).
-set -g renumber-windows on
+# Start a non-login shell instead of default login shell
+set -g default-command "${SHELL}"
+
+# The maximum number of lines held in window history
+set -g history-limit 262144
 
 # Mouse can be used to select panes, select windows (by clicking on the status
 # bar), resize panes. For default bindings see `tmux list-keys` and `tmux
 # list-keys -t vi-copy`.
 set -g mouse off
 
-# Slightly more useful width in "main-vertical" layout; enough room for 3-digit
-# line number gutter in Vim + 80 columns of text + 1 column breathing room
-# (default looks to be about 79).
-set -w -g main-pane-width 85
+# Automatically renumber window numbers on closing a pane (tmux >= 1.7).
+set -g renumber-windows on
+
+# Set the maximum for a key repeat
+set -g repeat-time 300
+
+# Dynamically update terminal tab/window titles.
+set -g set-titles on
+
+# Center the window list
+set -g status-justify centre
+
+# statsus line key bindings
+set -g status-keys emacs
+
+# Enable visual bell
+set -g visual-bell off
+
+# Window options {{{1
 
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
 setw -g aggressive-resize on
 
-set -g history-limit 262144
+# Don't change window titles.
+setw -g automatic-rename off
 
-# Dynamically update terminal tab/window titles.
-set -g set-titles on
+# Slightly more useful width in "main-vertical" layout; enough room for 3-digit
+# line number gutter in Vim + 80 columns of text + 1 column breathing room
+# (default looks to be about 79).
+setw -g main-pane-width 85
 
-# Needed as on tmux 1.9 and up (defaults to off).
-# Added in tmux commit c7a121cfc0137c907b7bfb.
-set -g focus-events on
-
-# But don't change tmux's own window titles.
-set -w -g automatic-rename off
-
-# Don't wrap searches; it's super confusing given tmux's reverse-ordering of
-# position info in copy mode.
-set -w -g wrap-search off
-
-# Set the default terminal mode to 256color mode
-set -g default-terminal "screen-256color"
-
-# Enable xterm-style key sequences
-setw -g xterm-keys on
-
-# Start a non-login shell instead of default login shell
-set -g default-command "${SHELL}"
-
-# visual bell
-set -g visual-bell off
-set -g bell-action none
+# vi keys.
+setw -g mode-keys vi
 
 # enable activity alerts
 setw -g monitor-activity on
 
-# enable vi keys.
-setw -g mode-keys vi
+# monitor for a bell in the window
+setw -g monitor-bell on
 
-# Center the window list
-set -g status-justify centre
+# Set the base index for panes to 1 instead of 0
+setw -g pane-base-index 1
 
-# Prefix {{{1
+# Don't wrap searches; it's super confusing given tmux's reverse-ordering of
+# position info in copy mode.
+setw -g wrap-search off
 
-# Prefix
+# Enable xterm-style key sequences
+setw -g xterm-keys on
+
+# Prefix key {{{1
+
+# Prefix key
 unbind C-b
 set -g prefix C-Space
 
 # Ensure that we can send Ctrl-Space to other apps
 bind C-b send-prefix
 
-# General bindings {{{1
+# General key bindings {{{1
 
 # Reload the file with Prefix r
 unbind r
@@ -180,7 +193,7 @@ bind -r C-Left switch-client -p
 unbind )
 bind -r C-Right switch-client -n
 
-# Vim-mode bindings {{{1
+# Vim-mode key bindings {{{1
 
 # vim-style yank-paste tmux buffers
 unbind Escape
@@ -206,15 +219,68 @@ bind P run "xsel --output --primary | tmux load-buffer - && tmux paste-buffer"
 bind -Tcopy-mode-vi C-c send -X copy-pipe-and-cancel "xsel --input --clipboard"
 bind C-v run "xsel --output --clipboard | tmux load-buffer - && tmux paste-buffer"
 
+# Colours {{{1
+
+# Note the tmux mapping of colour numbers to names:
+#   https://github.com/tmux/tmux/blob/master/colour.c#L109
+#
+# (See bin/colorlist to get a list of current colours by int)
+#
+# case  0: return ("black");
+# case  1: return ("red");
+# case  2: return ("green");
+# case  3: return ("yellow");
+# case  4: return ("blue");
+# case  5: return ("magenta");
+# case  6: return ("cyan");
+# case  7: return ("white");
+# case  8: return ("default");
+# case 90: return ("brightblack");
+# case 91: return ("brightred");
+# case 92: return ("brightgreen");
+# case 93: return ("brightyellow");
+# case 94: return ("brightblue");
+# case 95: return ("brightmagenta");
+# case 96: return ("brightcyan");
+# case 97: return ("brightwhite");
+
+# Based on https://github.com/seebi/tmux-colors-solarized
+
+# Display panes
+set -g display-panes-active-colour colour1
+set -g display-panes-colour colour4
+
+# Staus line
+set -g message-style fg=colour1,bg=colour0
+
+# Clock
+setw -g clock-mode-colour colour2
+setw -g clock-mode-style 24
+
+# Panes
+setw -g pane-active-border-style fg=colour11
+setw -g pane-border-style fg=colour11,bg=colour0
+
+# Windows
+setw -g window-active-style fg=colour12,bg=colour8
+setw -g window-status-activity-style fg=colour1,bg=default
+setw -g window-status-bell-style fg=colour0,bg=colour1
+setw -g window-status-current-style fg=colour2,bg=default
+setw -g window-status-style fg=colour11,bg=default
+setw -g window-style fg=colour10,bg=colour0
+
 # Status bar {{{1
 
-# Status line left side
-set -g status-left-length 30
-set -g status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H"
+# Status line style
+set -g status-style fg=colour3,bg=colour0
 
-# Status line right side
-set -g status-right-length 30
+# Status line left side
+set -g status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H"
+set -g status-left-length 30
+
+# Status line right side (hidden text)
 set -g status-right "#[fg=colour0]#S #[fg=colour0]on #[fg=colour0]#H"
+set -g status-right-length 30
 
 # Update the status bar every sixty seconds
 # set -g status-interval 60
@@ -293,52 +359,6 @@ bind -n S-Down \
     bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R" \; \
     bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l" \; \
     set -qg prefix C-Space
-
-# Colours {{{1
-
-# Note the tmux mapping of colour numbers to names:
-#   https://github.com/tmux/tmux/blob/master/colour.c#L109
-#
-# (See bin/colorlist to get a list of current colours by int)
-#
-# case  0: return ("black");
-# case  1: return ("red");
-# case  2: return ("green");
-# case  3: return ("yellow");
-# case  4: return ("blue");
-# case  5: return ("magenta");
-# case  6: return ("cyan");
-# case  7: return ("white");
-# case  8: return ("default");
-# case 90: return ("brightblack");
-# case 91: return ("brightred");
-# case 92: return ("brightgreen");
-# case 93: return ("brightyellow");
-# case 94: return ("brightblue");
-# case 95: return ("brightmagenta");
-# case 96: return ("brightcyan");
-# case 97: return ("brightwhite");
-
-# Based on https://github.com/seebi/tmux-colors-solarized
-
-setw -g window-active-style fg=colour12,bg=colour8
-setw -g window-style fg=colour10,bg=colour0
-
-set -g status-style fg=colour3,bg=colour0
-setw -g window-status-style fg=colour11,bg=default
-setw -g window-status-current-style fg=colour2,bg=default
-setw -g window-status-activity-style fg=colour1,bg=default
-setw -g window-status-bell-style fg=colour0,bg=colour1
-
-set -g message-style fg=colour1,bg=colour0
-
-set -g display-panes-active-colour colour1
-set -g display-panes-colour colour4
-setw -g pane-border-style fg=colour11,bg=colour0
-setw -g pane-active-border-style fg=colour11
-
-setw -g clock-mode-colour colour2
-setw -g clock-mode-style 24
 
 # tmux plugin manager {{{1
 
