--- a/.abcdef.conf
+++ b/.abcdef.conf
@@ -59,7 +59,7 @@ FLACOPTS='-s -e -V -8'                    # Options for FLAC
 # FFMPEGENCOPTS="-c:a ac3 -b:a 448k"        # Options for MKA (AC3 via FFmpeg)
 
 # OUTPUTTYPE="ogg,mp3,flac,mpc,m4a,opus,wv,ape,tta,mp2,mka"  # Encode to 11 formats!
-OUTPUTTYPE="mp3"
+OUTPUTTYPE="mp3,flac"
 
 # The cd ripping program to use. There are a few choices here: cdda2wav,
 # dagrab, cddafs (Mac OS X only) and flac. New to abcde 2.7 is 'libcdio'.
