abcde: update filename munging

--- a/.abcde.conf
+++ b/.abcde.conf
@@ -100,7 +100,7 @@ VAPLAYLISTFORMAT='${OUTPUT}/${ALBUMFILE}/${ALBUMFILE}.m3u'
 # in -e 's/ /_/g' after the first sed command.
 mungefilename ()
 {
-  echo "$@" | sed -e 's/^\.*//' | tr -d ":><|*/\"'?[:cntrl:]"
+  echo "$@" | sed -e 's/^\.*//' | tr -d ":><|*/\"?[:cntrl:]"
 }
 
 # What extra options?
