gbp: update config

--- a/.gbp.conf
+++ b/.gbp.conf
@@ -1,16 +1,24 @@
 [DEFAULT]
-pristine-tar = True
-
-[dch]
-full = True
-git-author = True
-
-[buildpackage]
-export-dir = /home/nick/dev/src/git/debian-packaging/build-area
+sign-tags = False
+keyid = 22B3D97BE9E898C90FF6523B3E9B59AC6EC2D359
 tarball-dir = /home/nick/dev/src/git/debian-packaging/tarballs
-builder = git-pbuilder
-cleaner = fakeroot debian/rules clean
-postbuild = lintian -EvIL +pedantic --no-tag-display-limit --profile pkg-perl $GBP_CHANGES_FILE
+upstream-tag = upstream/%(version)s
+debian-tag = debian/%(version)s
+debian-tag-msg = Releasing package %(pkg)s version %(version)s
+verbose = True
 
 [import-orig]
-dch = False
+pristine-tar = True
+rollback = True
+import-msg = New upstream version %(version)s
+
+[dch]
+full = False
+git-author = False
+
+[buildpackage]
+pbuilder = True
+pbuilder-autoconf = False
+dist = DEP14
+export-dir = /home/nick/dev/src/git/debian-packaging/build-area
+postbuild = lintian -EvIL +pedantic --no-tag-display-limit --profile pkg-perl $GBP_CHANGES_FILE
