--- a/.config/i3/config
+++ b/.config/i3/config
@@ -208,11 +208,10 @@ for_window [class="mpv"] floating enable
 for_window [class="Dia"] floating enable
 for_window [class="Audacious"] floating enable
 for_window [class="Wine"] floating enable
-for_window [class="Gimp"] floating enable
-for_window [class="Gimp-2.10"] floating disable
 for_window [class="Skype"] floating enable
 for_window [class="net-sourceforge-dvb-projectx-common-Start"] floating enable
 
+for_window [window_role="gimp-message-dialog"] floating enable
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 
