--- a/.pbuilderrc
+++ b/.pbuilderrc
@@ -1,11 +1,106 @@
 PDEBUILD_PBUILDER=cowbuilder
-BASEPATH=/var/cache/pbuilder/base-sid.cow
-BUILDRESULT=/home/nick/dev/src/git/debian-packaging/build-area
-OTHERMIRROR="deb [trusted=yes] file:///home/nick/dev/src/git/debian-packaging/build-area ./"
-BINDMOUNTS="/home/nick/dev/src/git/debian-packaging/build-area /var/cache/pbuilder/ccache"
 HOOKDIR=/usr/lib/pbuilder/hooks
+SOURCE_ONLY_CHANGES=yes
 EXTRAPACKAGES="apt-utils ccache"
-COMPONENTS="main contrib non-free"
+CCACHEDIR="/var/cache/pbuilder/ccache"
 
-export CCACHE_DIR="/var/cache/pbuilder/ccache"
-export PATH="/usr/lib/ccache:${PATH}"
+# Add some smarts to pbuilder
+# (from https://wiki.ubuntu.com/PbuilderHowto#Multiple_pbuilders)
+
+# Codenames for Debian suites according to their alias. Update when needed
+UNSTABLE_CODENAME="sid"
+TESTING_CODENAME="bullseye"
+STABLE_CODENAME="buster"
+STABLE_BACKPORTS_SUITE="$STABLE_CODENAME-backports"
+OLDSTABLE_CODENAME="stretch"
+OLDSTABLE_BACKPORTS_SUITE="$OLDSTABLE_CODENAME-backports"
+
+# List of Debian suites.
+DEBIAN_SUITES=(
+    $UNSTABLE_CODENAME $TESTING_CODENAME $STABLE_CODENAME $OLDSTABLE_CODENAME
+    "unstable" "testing" "stable" "oldstable")
+
+# List of Ubuntu suites. Update these needed.
+# Current release, current LTS release, previous LTS release
+UBUNTU_SUITES=("eoan" "bionic" "trusty")
+
+# Mirrors to use. Update these to your preferred mirror.
+DEBIAN_MIRROR="ftp.uk.debian.org"
+UBUNTU_MIRROR="ftp.mirrorservice.org/sites/archive.ubuntu.com"
+
+# Optionally use the changelog of a package to determine the suite to use if
+# none set.
+if [ -z "${DIST}" ] && [ -r "debian/changelog" ]; then
+    DIST=$(dpkg-parsechangelog | awk '/^Distribution: / {print $2}')
+    DIST="${DIST%%-*}"
+    # Use the unstable suite for certain suite values.
+    if $(echo "experimental UNRELEASED" | grep -q $DIST); then
+        DIST="$UNSTABLE_CODENAME"
+    fi
+fi
+
+# Optionally set a default distribution if none is used. Note that you can set
+# your own default (i.e. ${DIST:="unstable"}).
+# : ${DIST:="$(lsb_release --short --codename)"}
+: ${DIST:="unstable"}
+
+# Optionally change Debian release states in $DIST to their names.
+case "$DIST" in
+    unstable)
+        DIST="$UNSTABLE_CODENAME"
+        ;;
+    testing)
+        DIST="$TESTING_CODENAME"
+        ;;
+    stable)
+        DIST="$STABLE_CODENAME"
+        ;;
+    oldstable)
+        DIST="$OLDSTABLE_CODENAME"
+        ;;
+esac
+
+# Optionally set the architecture to the host architecture if none set. Note
+# that you can set your own default (i.e. ${ARCH:="i386"}).
+# : ${ARCH:="$(dpkg --print-architecture)"}
+# : ${ARCH:="amd64"}
+
+NAME="$DIST"
+if [ -n "${ARCH}" ]; then
+    NAME="$NAME-$ARCH"
+    DEBOOTSTRAPOPTS=("--arch" "$ARCH" "${DEBOOTSTRAPOPTS[@]}")
+fi
+
+if [ -n "${DIST}" ]; then
+    export DISTRIBUTION="$DIST"
+
+    # Optionally, set BASEPATH (and not BASETGZ) if using cowbuilder
+    # BASETGZ="/var/cache/pbuilder/$NAME-base.tgz"
+    export BASEPATH="/var/cache/pbuilder/base-$NAME.cow/"
+    export BUILDPLACE="/var/cache/pbuilder/build/"
+
+    export BUILDRESULT="/home/nick/dev/src/git/debian-packaging/build-area"
+    # export BUILDRESULT="/home/nick/dev/src/git/debian-packaging/builds-$DIST"
+
+    APTCACHE="/var/cache/pbuilder/$NAME/aptcache/"
+
+    OTHERMIRROR="deb [trusted=yes] file://$BUILDRESULT ./"
+
+    BINDMOUNTS="$BUILDRESULT"
+fi
+
+if $(echo ${DEBIAN_SUITES[@]} | grep -q $DIST); then
+    # Debian configuration
+    MIRRORSITE="http://$DEBIAN_MIRROR/debian/"
+    COMPONENTS="main contrib non-free"
+    DEBOOTSTRAPOPTS=("${DEBOOTSTRAPOPTS[@]}" "--keyring=/usr/share/keyrings/debian-archive-keyring.gpg")
+
+elif $(echo ${UBUNTU_SUITES[@]} | grep -q $DIST); then
+    # Ubuntu configuration
+    MIRRORSITE="http://$UBUNTU_MIRROR/ubuntu/"
+    COMPONENTS="main restricted universe multiverse"
+    DEBOOTSTRAPOPTS=("${DEBOOTSTRAPOPTS[@]}" "--keyring=/usr/share/keyrings/ubuntu-archive-keyring.gpg")
+else
+    echo "Unknown distribution: $DIST"
+    exit 1
+fi
