--- a/.tmux.conf
+++ b/.tmux.conf
@@ -124,7 +124,7 @@ unbind C
 bind C new-window -c "~"
 # normally prefix-%
 unbind %
-bind \ split-window -h -c "#{pane_current_path}"
+bind '\' split-window -h -c "#{pane_current_path}"
 # normally prefix-"
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
@@ -136,7 +136,7 @@ bind -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n 'C-\' if-shell "$is_vim" "send-keys 'C-\\'" "select-pane -l"
 
 # Vim-like key bindings for pane navigation (default uses cursor keys).
 unbind h
